# demo2

./: .gitignore  Cargo.toml  wgsl.import
assets/: board.aseprite  cards.aseprite  icon_pack.aseprite
assets/aseprites/: background.aseprite  cards.aseprite  other.aseprite
assets/metadata/: aseprite_cards.json
assets/shaders/: background.wgsl  background_shader.wgsl  card.wgsl  crt_post_processing.wgsl  gamble_text.wgsl  gamble_text_shader.wgsl  my_texture_atlas.wgsl
src/: component.rs  components.rs  main.rs  resources.rs  states.rs  systems.rs  util.rs
src/game_play/: components.rs  event.rs  mod.rs  util.rs
src/game_play/systems/: hover.rs  hovering.rs  mod.rs  mouse_input_handle.rs  movement.rs  selection.rs  setup.rs  shaking.rs  tilting.rs  util.rs
src/main_menu/: components.rs  mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/visual_effect/: crt_post_processing.rs  mod.rs
