[package]
name = "demo2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "*", features = ["file_watcher"]}
bevy_hanabi = {version = "*"}
bevy-inspector-egui = {version = "*"}
bevy_egui = {version = "*"}
bevy_mod_debugdump = {version = "*", optional = true}
bevy_screen_diagnostics= {version ="*", optional = true}
strum = {version="*"}
strum_macros = {version="*"}
serde = {version = "*", features = ["derive"] }
serde_json = {version = "*"}

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
bevy_screen_diagnostics_plugin=["dep:bevy_screen_diagnostics"]
sysinfo_plugin=["bevy_screen_diagnostics/sysinfo_plugin"]
bevy_mod_debugdump_plugin=["dep:bevy_mod_debugdump"]
